--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
   "release": {
     "branches": [
       "main"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/github",
+      [
+        "@semantic-release/exec",
+        {
+          "prepareCmd": "set-version ${nextRelease.version}",
+          "publishCmd": "publish-package"
+        }
+      ]
     ]
   },
   "devDependencies": {
