--- a/package.json
+++ b/package.json
@@ -14,14 +14,7 @@
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      "@semantic-release/github",
-      [
-        "@semantic-release/exec",
-        {
-          "prepareCmd": "set-version ${nextRelease.version}",
-          "publishCmd": "publish-package"
-        }
-      ]
+      "@semantic-release/github"
     ]
   },
   "devDependencies": {
